@@ -1,6 +1,10 @@
 octsympy 2.7.2-dev
 ==================
 
+  * New symbolic commands:
+
+          ezmesh
+
   * Minimum SymPy version is now 1.1.1.
 
   * Newer SymPy versions improve QR and LU on non-square matrices.
